<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/bck3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bck"
            android:contentDescription="@string/deskrip1" />
        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hll"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="16sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"/>
        <TextView
            android:id="@+id/usrview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="24sp"
            android:layout_marginStart="30dp"
            android:layout_below="@+id/hello"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"/>
        <TextView
            android:id="@+id/topmv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/usrview"
            android:text="@string/top"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinssemibold"
            android:textSize="20sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"/>
        <ImageView
            android:id="@+id/imgsherina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sherina"
            android:layout_below="@+id/topmv"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/deskrip4"
            />
        <TextView
            android:id="@+id/judulsher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulsher"
            android:layout_below="@+id/imgsherina"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="12sp"/>
        <ImageView
            android:id="@+id/ratsher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bintang"
            android:layout_below="@+id/judulsher"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/rat1"/>
        <ImageView
            android:id="@+id/imgtegar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/tegar"
            android:layout_below="@+id/topmv"
            android:layout_toEndOf="@+id/imgsherina"
            android:layout_marginStart="45dp"
            android:contentDescription="@string/deskrip5"/>
        <TextView
            android:id="@+id/judultgr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judultgr"
            android:layout_below="@+id/imgtegar"
            android:layout_marginStart="60dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="12sp"
            android:layout_toEndOf="@+id/judulsher"/>
        <ImageView
            android:id="@+id/rattgr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bintang"
            android:layout_below="@+id/judultgr"
            android:layout_marginStart="227dp"
            android:contentDescription="@string/rat2"/>
        <ImageView
            android:id="@+id/imgsuhita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/suhita"
            android:layout_below="@+id/ratsher"
            android:layout_marginTop="8dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/deskrip6"/>
        <TextView
            android:id="@+id/judulsuhit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulsuhita"
            android:layout_below="@+id/imgsuhita"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="12sp"/>
        <ImageView
            android:id="@+id/ratsuhit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bintang"
            android:layout_below="@+id/judulsuhit"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/rat3"/>
        <ImageView
            android:id="@+id/imgair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/airmata"
            android:layout_below="@+id/ratsuhit"
            android:layout_marginTop="8dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/deskrip3"/>
        <TextView
            android:id="@+id/judulair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulair"
            android:layout_below="@+id/imgair"
            android:layout_marginStart="30dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="12sp"/>
        <ImageView
            android:id="@+id/ratair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bintang"
            android:layout_below="@+id/judulair"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/rat5"/>
        <ImageView
            android:id="@+id/imgghost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/helloghost"
            android:layout_below="@+id/rattgr"
            android:layout_toEndOf="@+id/imgsuhita"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/deskrip7"/>

        <TextView
            android:id="@+id/judulghost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulghost"
            android:layout_below="@+id/imgghost"
            android:layout_marginStart="127dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="12sp"
            android:layout_toEndOf="@+id/judulsuhit"/>
        <ImageView
            android:id="@+id/ratghost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bintang"
            android:layout_below="@+id/judulghost"
            android:layout_marginStart="227dp"
            android:contentDescription="@string/rat4"/>
        <ImageView
            android:id="@+id/imghamka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buyahamka"
            android:layout_below="@+id/ratghost"
            android:layout_toEndOf="@+id/imgair"
            android:layout_marginStart="45dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/deskrip8"/>
        <TextView
            android:id="@+id/judulhamka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulbuyham"
            android:layout_below="@+id/imghamka"
            android:layout_marginStart="40dp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="12sp"
            android:layout_toEndOf="@+id/judulair"/>
        <ImageView
            android:id="@+id/ratehamka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bintang"
            android:layout_below="@+id/judulhamka"
            android:layout_marginStart="227dp"
            android:contentDescription="@string/rat6"/>
    </RelativeLayout>
</ScrollView>