<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment">
    <ImageView
        android:id="@+id/bck4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bck"
        android:contentDescription="@string/deskrip1" />
    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/baseline_navigate_before_24"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"/>
    <TextView
        android:id="@+id/judulpay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay"
        android:layout_marginTop="15dp"
        android:layout_marginStart="90dp"
        android:fontFamily="@font/poppinsmedium"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignBaseline="@id/back"/>
    <TextView
        android:id="@+id/pilbioskop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilbioskop"
        android:layout_below="@+id/back"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>
    <Spinner
        android:id="@+id/bioskop"
        android:layout_width="386dp"
        android:layout_height="48dp"
        android:layout_below="@+id/pilbioskop"
        android:layout_marginStart="15dp"/>
    <TextView
        android:id="@+id/pilseat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilseat"
        android:layout_below="@+id/bioskop"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="2dp"/>
    <Spinner
        android:id="@+id/seat"
        android:layout_width="386dp"
        android:layout_height="48dp"
        android:layout_below="@+id/pilseat"
        android:layout_marginStart="15dp"/>
    <TextView
        android:id="@+id/piltgl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/piltgl"
        android:layout_below="@+id/seat"
        android:layout_marginStart="20dp"
        android:textColor="@color/white"
        android:layout_marginTop="2dp"/>
    <EditText
        android:id="@+id/datepick"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/piltgl"
        android:layout_marginTop="12dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="MM/DD/YYYY"
        android:inputType="date"
        android:paddingBottom="20dp"
        android:layout_marginStart="15dp"/>
    <TextView
        android:id="@+id/hargaKursi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datepick"
        android:layout_marginTop="12dp"
        android:layout_marginStart="25dp"
        android:text=""
        android:textSize="18sp"
        android:textColor="@color/white"/>



</RelativeLayout>
